adds latent space analysis

--- a/workspace/fish stimulation responses.ipynb
+++ b/workspace/fish stimulation responses.ipynb
@@ -13,22 +13,21 @@
     "import tensortools as tt\n",
     "from tensortools.cpwarp import fit_shifted_cp\n",
     "from sklearn.cluster import SpectralClustering\n",
+    "import scipy\n",
+    "\n",
+    "from naumann_utility_functions import make_responses, find_decompositions, reshape_by_group\n",
     "\n",
     "rng = np.random.default_rng()\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Import the dataset\n",
-    "There are two warnings you might see here, depending on which dataset is loaded.\n",
-    "The first is about \"chopping last frames because C is too small\".\n",
-    "This occurs when the timestamp has more entries than the flouresence trace has timepoints.\n",
-    "The second error is about bin width being improper; this is called because I try to calculate a single timestep size for \n",
-    "things like converting between experiment time and number of samples.\n",
-    "I mostly use samples in this notebook, but that warning is a reminder that the sample widths aren't exactly even."
+    "\n"
    ]
   },
   {
@@ -38,12 +37,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = al.datasets.Naumann24uDataset(sub_dataset_index=1)"
+    "d = al.datasets.Naumann24uDataset(sub_dataset_identifier=2)\n",
+    "responses = make_responses(d)\n",
+    "non_nan_responses = responses[...,:d.n_neurons_in_optical]\n",
+    "\n",
+    "models = find_decompositions(non_nan_responses, n_restarts=200)\n",
+    "model = models[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "template = [[1.]]\n",
+    "convolved = scipy.signal.convolve2d(template, d.neural_data[:,:d.n_neurons_in_optical], mode='valid')\n",
+    "plt.matshow(convolved.T, aspect='auto')\n",
+    "# 83\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "template = model.factors[2].T\n",
+    "convolved = scipy.signal.convolve2d(template, d.neural_data[:,:d.n_neurons_in_optical], mode='valid')\n",
+    "plt.matshow(convolved.T, aspect='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "signal = 100 * np.array(d.neural_data[50:,75])\n",
+    "divisor = 100 * model.factors[2].flatten()\n",
+    "\n",
+    "divisor = divisor[np.cumsum(np.abs(divisor)) > 1]\n",
+    "quotient, remainder = scipy.signal.deconvolve(signal, divisor)\n",
+    "\n",
+    "fig, axs = plt.subplots(2,2)\n",
+    "axs[0,0].plot(signal)\n",
+    "axs[0,1].plot(divisor)\n",
+    "\n",
+    "axs[1,0].plot(quotient)\n",
+    "axs[1,0].set_ylim([-10,10])\n",
+    "axs[1,1].plot(remainder)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(model.factors[2].flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "template = model.factors[2].T @ model.factors[0]\n",
+    "convolved = scipy.signal.convolve2d(template, d.neural_data[:,:d.n_neurons_in_optical], mode='valid')\n",
+    "plt.plot(convolved)\n",
+    "for s in d.opto_stimulations['sample']:\n",
+    "    plt.axvline(s, color='g', alpha=.5)\n",
+    "\n",
+    "for s in d.visual_stimuli['sample']:\n",
+    "    plt.axvline(s, color='r', alpha=.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "responses = make_responses(d)\n",
+    "responses_by_group = reshape_by_group(responses, d)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Initial Plot\n",
@@ -53,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Result\n",
@@ -85,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Extract responses\n",
@@ -96,56 +191,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def organize_neural_data_by_stimulation(d, peri_stim_window=None):\n",
-    "    if peri_stim_window is None:\n",
-    "        peri_stim_window = [0, np.diff(d.opto_stimulations['sample']).min()]\n",
-    "\n",
-    "    peri_stim_recordings = []\n",
-    "    d.opto_stimulations.sort_values(by='time')\n",
-    "    for stim_sample in d.opto_stimulations['sample']:\n",
-    "        samples = np.arange(d.neural_data.shape[0])\n",
-    "        s = (stim_sample + peri_stim_window[0] <= samples) & (samples < stim_sample + peri_stim_window[1])\n",
-    "        if not s[-1]:\n",
-    "            peri_stim_recordings.append(d.neural_data[s,:])\n",
-    "\n",
-    "    return np.array(peri_stim_recordings)\n",
-    "\n",
-    "def make_responses(d):\n",
-    "    peri_stim_recordings = organize_neural_data_by_stimulation(d)\n",
-    "    responses = peri_stim_recordings - peri_stim_recordings[:,0:1,:]\n",
-    "    return responses\n",
-    "    \n",
-    "def reshape_by_group(a,d):\n",
-    "    responses_by_group = []\n",
-    "    groups = []\n",
-    "    for neuron, psth in zip(d.opto_stimulations.target_neuron, a):\n",
-    "        if not groups or groups[-1] != neuron:\n",
-    "            if groups:\n",
-    "                responses_by_group[-1] = np.array(responses_by_group[-1])\n",
-    "            responses_by_group.append([])\n",
-    "            groups.append(neuron)\n",
-    "        responses_by_group[-1].append(psth)\n",
-    "        \n",
-    "    responses_by_group[-1] = np.array(responses_by_group[-1])\n",
-    "\n",
-    "    return responses_by_group\n",
-    "\n",
-    "\n",
-    "\n",
-    "responses = make_responses(d)\n",
-    "responses_by_group = reshape_by_group(responses, d)\n",
-    "print(f\"{responses.shape = } (stimulations, timesteps, neurons)\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Some neural responses are consistent\n",
@@ -155,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +288,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "plot_single_group_responses(group_n=groups_to_inspect[0], responses_by_group=responses_by_group)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "17",
    "metadata": {},
    "source": [
     "Some neurons showed consistent responses; group 5, stimulating neuron 107, is a good example of a consistent response.\n",
@@ -262,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "20",
    "metadata": {},
    "source": [
     "## Comparison matrices\n",
@@ -299,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +384,7 @@
     "            ax.axhline(boundary, color='w', lw=lw)\n",
     "        ax.set_xticks([e - s/2 for s,e in zip(group_sizes, group_edges)])\n",
     "        if group_names is None:\n",
-    "            group_names = [f\"{g}'\" for g in range(len(group_sizes))]\n",
+    "            group_names = [f\"{chr(65+g)}\" for g in range(len(group_sizes))]\n",
     "        ax.set_xticklabels(group_names)\n",
     "        ax.set_xlabel('group #')\n",
     "        ax.set_ylabel('stim #')\n",
@@ -346,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +406,7 @@
     "fig, axs = plt.subplots(ncols=3, figsize=(10,5))\n",
     "\n",
     "for ax, method in zip(axs, comparison_methods):\n",
-    "    plot_comparison(ax, compare_rows(responses_sub_mat, method=method), group_sizes=[responses_by_group[i].shape[0] for i in groups_to_inspect], group_names=groups_to_inspect)\n",
+    "    plot_comparison(ax, compare_rows(responses_sub_mat, method=method), group_sizes=[responses_by_group[i].shape[0] for i in groups_to_inspect], group_names=[chr(65+i) for i in groups_to_inspect])\n",
     "    ax.set_title(f'Comparison using {method}')\n",
     "    \n",
     "fig.tight_layout()\n"
@@ -366,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "23",
    "metadata": {},
    "source": [
     "Next, I wanted to see if the responses within groups were more similar than the responses between groups.\n",
@@ -381,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "25",
    "metadata": {},
    "source": [
     "This is a similar graph, but now considering all pairs of stimuli.\n",
@@ -421,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "27",
    "metadata": {},
    "source": [
     "My biggest conclusion from the animation is that there is a temporal organization to the response angle convergence. \n",
@@ -455,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,21 +522,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "plt.matshow(activation_of_neural_component)\n",
-    "plt.xlabel(\"stimulation\")\n",
-    "plt.ylabel(\"timepoint\")\n",
-    "plt.title(\"Projection of neural activity onto timestep 14's dominant activity pattern\")\n",
+    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "ax.matshow(activation_of_neural_component)\n",
+    "ax.set_xlabel(\"stimulation\")\n",
+    "ax.set_ylabel(\"timepoint\")\n",
+    "ax.set_title(\"Projection of neural activity onto timestep 14's dominant activity pattern\")\n",
+    "\n",
+    "group_sizes = [g.shape[0] for g in responses_by_group]\n",
+    "group_edges = np.cumsum(group_sizes)-.5\n",
+    "for boundary in group_edges:\n",
+    "    ax.axvline(boundary, color='w', lw=.5)\n",
+    "ax.set_xticks([e - s/2 for s,e in zip(group_sizes, group_edges)], [chr(65+i) for i in range(len(group_edges))]);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "peri_stim_recordings = []\n",
+    "d.opto_stimulations.sort_values(by='time')\n",
+    "borders = list(d.opto_stimulations['sample']) + [d.neural_data.shape[0]]\n",
+    "for i in range(len(borders)-1):\n",
+    "    peri_stim_recordings.append(d.neural_data[borders[i]:borders[i+1],:d.n_neurons_in_optical])\n",
+    "\n",
+    "temp = np.zeros([len(peri_stim_recordings)] + list(np.max([s.shape for s in peri_stim_recordings], axis=0))) * np.nan\n",
+    "for i, psr in enumerate(peri_stim_recordings):\n",
+    "    temp[i, :psr.shape[0], :psr.shape[1]] = psr - psr[0]\n",
+    "peri_stim_recordings = temp\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "ax.matshow((peri_stim_recordings @ svd_neural_component).T)\n",
+    "for boundary in np.cumsum([g.shape[0] for g in responses_by_group])-.5:\n",
+    "    ax.axvline(boundary, color='w', lw=.5)\n",
+    "\n",
+    "group_sizes = [g.shape[0] for g in responses_by_group]\n",
+    "group_edges = np.cumsum(group_sizes)-.5\n",
+    "for boundary in group_edges:\n",
+    "    ax.axvline(boundary, color='w', lw=.5)\n",
+    "ax.set_xticks([e - s/2 for s,e in zip(group_sizes, group_edges)], [chr(65+i) for i in range(len(group_edges))]);\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "31",
    "metadata": {},
    "source": [
     "## Tensor decomposition\n",
@@ -501,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,8 +652,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "inferred_responses = model.predict().transpose([1,0,2])\n",
+    "background = rng.normal(size=inferred_responses.shape) * .01\n",
+    "inferred_responses = inferred_responses + background\n",
+    "\n",
+    "timepoint = 13\n",
+    "fig, axs = plt.subplots(ncols=2, gridspec_kw={'width_ratios': [20, 1]}, figsize=(7,7))\n",
+    "comparison_matrix = compare_rows(inferred_responses[:,timepoint,:], method='angles')\n",
+    "plot_comparison(axs[0], comparison_matrix, group_sizes=[g.shape[0] for g in responses_by_group], ax_colorbar=axs[1])\n",
+    "fig.tight_layout()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "35",
    "metadata": {},
    "source": [
     "The result of this decomposition isn't particularly inspiring in the neural or trial loadings (although the neuron loadings \n",
@@ -579,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "36",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "39",
    "metadata": {},
    "source": [
     "Above, I compare the temporal component discovered for all of the datasets; they have similar dynamics.\n",
@@ -670,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "40",
    "metadata": {},
    "source": [
     "## Dataset 1 delay recovery\n",
@@ -681,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
