adds a set of work notebooks

--- a/workspace/fish stimulation responses.ipynb
+++ b/workspace/fish stimulation responses.ipynb
@@ -15,7 +15,7 @@
     "from sklearn.cluster import SpectralClustering\n",
     "import scipy\n",
     "\n",
-    "from naumann_utility_functions import make_responses, find_decompositions, reshape_by_group\n",
+    "from naumann_utility_functions import make_responses, find_decompositions, reshape_by_group, compare_rows, plot_comparison, plot_per_neuron\n",
     "\n",
     "rng = np.random.default_rng()\n"
    ]
@@ -206,15 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_per_neuron(ax, fg_s, d, bg_s=1, bg_c='k', bg_alpha=.1, fg_c='red'):\n",
-    "    fg_s = np.squeeze(fg_s)\n",
-    "    neuron_locations = d.neuron_locations\n",
-    "    if fg_s.shape[0] < neuron_locations.shape[0]:\n",
-    "        neuron_locations = neuron_locations[:fg_s.shape[0]]\n",
-    "    ax.scatter(neuron_locations[:,1], neuron_locations[:,0], s=bg_s, color=bg_c, alpha=bg_alpha)\n",
-    "    ax.scatter(neuron_locations[:,1], neuron_locations[:,0], s=fg_s, color=fg_c)\n",
-    "    ax.axis('equal')\n",
-    "    ax.axis('off')\n",
     "\n",
     "\n",
     "def plot_single_group_responses(group_n, responses_by_group):\n",
@@ -351,53 +342,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compare_rows(a, method='angles'):\n",
-    "    comparison_matrix = np.zeros([len(a), len(a)]) * np.nan\n",
-    "    for i in range(comparison_matrix.shape[0]):\n",
-    "        for j in range(comparison_matrix.shape[1]):\n",
-    "            ai_hat = a[i] / np.linalg.norm(a[i])\n",
-    "            aj_hat = a[j] / np.linalg.norm(a[j])\n",
-    "            if method == 'angles':\n",
-    "                comparison_matrix[i,j] = np.arccos(np.clip(ai_hat @ aj_hat, -1, 1)) * 180 / np.pi\n",
-    "            elif method == 'distances':\n",
-    "                comparison_matrix[i,j] = np.linalg.norm(a[i] - a[j])\n",
-    "            elif method == 'norm_distances':\n",
-    "                comparison_matrix[i,j] = np.linalg.norm(ai_hat - aj_hat)\n",
-    "            else:\n",
-    "                comparison_matrix[i,j] = method(a[i], a[j])\n",
-    "    return comparison_matrix\n",
-    "    \n",
-    "\n",
-    "def plot_comparison(ax, comparison_matrix, vmin=None, vmax=None, ax_colorbar=None, group_sizes=None, group_names=None):\n",
-    "    ax.cla()\n",
-    "    if vmin is None:\n",
-    "        vmin = comparison_matrix[comparison_matrix>comparison_matrix.min()].min()\n",
-    "    im = ax.matshow(comparison_matrix, vmin=vmin, vmax=vmax)\n",
-    "    if ax_colorbar is not None:\n",
-    "        fig.colorbar(mappable=im, cax=ax_colorbar)\n",
-    "        \n",
-    "    if group_sizes is not None:\n",
-    "        group_edges = np.cumsum(group_sizes)-.5\n",
-    "        for boundary in group_edges:\n",
-    "            lw = .5\n",
-    "            ax.axvline(boundary, color='w', lw=lw)\n",
-    "            ax.axhline(boundary, color='w', lw=lw)\n",
-    "        ax.set_xticks([e - s/2 for s,e in zip(group_sizes, group_edges)])\n",
-    "        if group_names is None:\n",
-    "            group_names = [f\"{chr(65+g)}\" for g in range(len(group_sizes))]\n",
-    "        ax.set_xticklabels(group_names)\n",
-    "        ax.set_xlabel('group #')\n",
-    "        ax.set_ylabel('stim #')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "timepoint = 14\n",
     "responses_sub_mat = np.vstack([responses_by_group[i] for i in groups_to_inspect])[:, timepoint, :d.n_neurons_in_optical]\n",
     "\n",
@@ -414,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "source": [
     "Next, I wanted to see if the responses within groups were more similar than the responses between groups.\n",
@@ -429,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,8 +389,48 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trials_indexes_to_mark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timepoint = 13 \n",
+    "non_nan_responses = responses[...,:d.n_neurons_in_optical]\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2, gridspec_kw={'width_ratios': [20, 1]}, figsize=(7,7))\n",
+    "\n",
+    "comparison_matrix = compare_rows(non_nan_responses[:,timepoint,:], method='angles')\n",
+    "plot_comparison(axs[0], comparison_matrix, group_sizes=[g.shape[0] for g in responses_by_group], ax_colorbar=axs[1])\n",
+    "\n",
+    "\n",
+    "trials_to_mark = \"N2 C0 L2 D2 I3 G0 N3 C1 G1\".split(' ')\n",
+    "trials_indexes_to_mark = [(ord(g) - 65) * 5 + int(i) for g,i in trials_to_mark]\n",
+    "\n",
+    "axs[0].set_xticks(trials_indexes_to_mark)\n",
+    "axs[0].set_xticklabels(trials_to_mark, rotation=90, size='small')\n",
+    "axs[0].set_yticks(trials_indexes_to_mark)\n",
+    "\n",
+    "axs[0].set_xlabel(\"\")\n",
+    "axs[0].set_ylabel(\"\")\n",
+    "\n",
+    "fig.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26",
    "metadata": {},
    "source": [
     "This is a similar graph, but now considering all pairs of stimuli.\n",
@@ -469,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "source": [
     "My biggest conclusion from the animation is that there is a temporal organization to the response angle convergence. \n",
@@ -503,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "source": [
     "## Tensor decomposition\n",
@@ -588,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "source": [
     "The result of this decomposition isn't particularly inspiring in the neural or trial loadings (although the neuron loadings \n",
@@ -685,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "source": [
     "\n",
@@ -699,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "source": [
     "Above, I compare the temporal component discovered for all of the datasets; they have similar dynamics.\n",
@@ -776,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "source": [
     "## Dataset 1 delay recovery\n",
@@ -787,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
