--- a/workspace/latent_space_responses.ipynb
+++ b/workspace/latent_space_responses.ipynb
@@ -41,22 +41,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = al.Pipeline([\n",
-    "    al.KernelSmoother(tau=2),\n",
-    "    al.CenteringTransformer(init_size=100),\n",
-    "    pro:=al.proSVD(k=3),\n",
-    "    # jpca:=al.sjPCA()\n",
-    "])\n",
+    "d = al.datasets.Naumann24uDataset(sub_dataset_identifier=2)\n",
     "\n",
-    "visual_stimuli_data = d.neural_data.slice(slice(0, d.last_visual_sample))\n",
-    "opto_stimuli_data = d.neural_data.slice(slice(d.last_visual_sample, -1))\n",
-    "\n",
-    "online_output = p.offline_run_on(visual_stimuli_data)\n",
-    "\n",
-    "p.steps[0] = al.KernelSmoother(tau=p.steps[0].tau)\n",
-    "for step in p.steps[1:]:\n",
-    "    step.freeze()\n",
-    "offline_output = p.offline_run_on(opto_stimuli_data)\n"
+    "d.neural_data[np.isnan(d.neural_data)] = 0\n",
+    "responses = make_responses(d, non_nan=True)"
    ]
   },
   {
@@ -66,9 +54,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "pro = None\n",
+    "jpca = None\n",
+    "p = al.Pipeline([\n",
+    "    al.KernelSmoother(tau=2),\n",
+    "    # al.CenteringTransformer(init_size=100),\n",
+    "    pro:=al.proSVD(k=3),\n",
+    "    # jpca:=al.sjPCA()\n",
+    "])\n",
     "\n",
-    "plt.plot(opto_stimuli_data[:, 80:90].as_array());"
+    "visual_stimuli_data = d.neural_data.slice(slice(0, d.last_visual_sample))\n",
+    "opto_stimuli_data = d.neural_data.slice(slice(d.last_visual_sample, -1))\n",
+    "\n",
+    "online_output = p.offline_run_on(opto_stimuli_data)\n",
+    "\n",
+    "for i, step in enumerate(p.steps):\n",
+    "    if isinstance(step, al.KernelSmoother):\n",
+    "        p.steps[i] = al.KernelSmoother(**step.get_params())\n",
+    "    else:\n",
+    "        step.freeze()\n",
+    "offline_output = p.offline_run_on(opto_stimuli_data)\n"
    ]
   },
   {
@@ -78,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib qt\n",
     "\n",
     "output = offline_output\n",
     "\n",
@@ -86,45 +92,40 @@
     "o = output.as_array()\n",
     "for i, stim_t in enumerate(d.opto_stimulations.time[:-1]):\n",
     "    stim = np.nonzero(output.t > stim_t)[0][0]\n",
-    "    s = slice(stim + 0, stim + 2)\n",
+    "    s = slice(stim + 8, stim + 20)\n",
     "    ax.plot(o[s, 0], o[s, 1], o[s, 2], 'C1')\n",
-    "    # ax.text(o[s.start,0], o[s.start,1], o[s.start,2], s=d.opto_stmulations.loc[i,'stim_name'])\n",
+    "    # ax.text(o[s.start,0], o[s.start,1], o[s.start,2], s=d.opto_stimulations.loc[i,'stim_name'])\n",
     "\n",
     "\n",
     "ax.scatter(0,0,0, color='k')\n",
     "\n",
     "\n",
-    "# arrow = np.vstack([np.zeros(3), np.ones(3) * 10]).T\n",
-    "# ax.plot(arrow[0], arrow[1], arrow[2], color='C2')\n",
+    "arrow = np.vstack([np.zeros(3), np.ones(3) * 20]).T\n",
+    "ax.plot(arrow[0], arrow[1], arrow[2], color='C6', label='1s vector')\n",
     "\n",
     "\n",
-    "# loading = model.factors[0]\n",
-    "# v = loading @ pro.Q[:loading.size]\n",
-    "# U = jpca.get_U()\n",
-    "# U_perp = np.linalg.cross(U[:,0], U[:,1]).reshape(-1,1)\n",
-    "# U = np.hstack([U[:,:2], U_perp])\n",
-    "# v = v @ U\n",
-    "# \n",
-    "# arrow = np.vstack([np.zeros(3), v] ).T\n",
-    "# ax.plot(arrow[0], arrow[1], arrow[2], color='C3')\n",
+    "loading = model.factors[0]\n",
+    "v = loading @ pro.Q[:loading.size]\n",
+    "if jpca is not None:\n",
+    "    U = jpca.get_U()\n",
+    "    if pro.Q.shape[1] == 3:\n",
+    "        U_perp = np.linalg.cross(U[:,0], U[:,1]).reshape(-1,1)\n",
+    "        U = np.hstack([U[:,:2], U_perp])\n",
+    "    v = v @ U\n",
+    " \n",
+    "arrow = np.vstack([np.zeros(v.shape[1]), v] ).T\n",
+    "ax.plot(arrow[0], arrow[1], arrow[2], color='C3', label='direction from TCA')\n",
     "\n",
     "\n",
+    "ax.legend()\n",
     "ax.axis('equal')\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6",
-   "metadata": {},
-   "source": [
-    "N2, C0 L2, D2, G0, I3, C1 N3 G1 "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +148,21 @@
     "fig, ax = plt.subplots()\n",
     "ax.axvline(angle, color='r')\n",
     "ax.hist(angles, 100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(model.factors[-1].T)\n",
+    "x = np.arange(24)\n",
+    "ax.plot(x,np.maximum(np.sin(x/6 - 1.15)/8.9,0))\n",
+    "ax.plot(x,np.maximum(-(x-16.2)**2/500 + .115,0))\n"
    ]
   }
  ],
